--- a/languages/ansible/config.toml
+++ b/languages/ansible/config.toml
@@ -1,5 +1,4 @@
 name = "Ansible"
-grammar = "yaml"
 
 path_suffixes = ["ansible"]
 
@@ -23,12 +22,12 @@ autoclose_before = ",]}"
 brackets = [
     { start = "{", end = "}", close = true, newline = true },
     { start = "[", end = "]", close = true, newline = true },
-    { start = "\"", end = "\"", close = true, newline = false, not_in = [
-        "string",
-    ] },
+    { start = "\"", end = "\"", close = true, newline = false, not_in = ["string"] },
+    { start = "'", end = "'", close = true, newline = false, not_in = ["string"] },
 ]
 
 auto_indent_using_last_non_empty_line = false
 increase_indent_pattern = ":\\s*[|>]?\\s*$"
-prettier_parser_name = "yaml"
 tab_size = 2
+
+
