--- a/languages/ansible/config.toml
+++ b/languages/ansible/config.toml
@@ -1,33 +1,21 @@
 name = "Ansible"
-
+grammar = "ansible"
 path_suffixes = ["ansible"]
-
-# INFO: Following doesn't work yet - however, the contents of this list can be added to the 'Ansible' key under file_types under Zed Settings.
-# path_suffixes = [
-#     "**.ansible.yml",
-#     "**/defaults/**.yml",
-#     "**/tasks/**.yml",
-#     "**/tasks/*.yml",
-#     "**/tasks/*.yaml",
-#     "**/handlers/*.yml",
-#     "**/handlers/*.yaml",
-#     "**/meta/*.yml",
-#     "**/playbooks/*.yml",
-# ]
-
-first_line_pattern = '^#!.*ansible.*'
-
+first_line_pattern = '^#!.*ansible'
 line_comments = ["# "]
 autoclose_before = ",]}"
 brackets = [
     { start = "{", end = "}", close = true, newline = true },
     { start = "[", end = "]", close = true, newline = true },
-    { start = "\"", end = "\"", close = true, newline = false, not_in = ["string"] },
-    { start = "'", end = "'", close = true, newline = false, not_in = ["string"] },
+    { start = "\"", end = "\"", close = true, newline = false, not_in = [
+        "string",
+    ] },
+    { start = "'", end = "'", close = true, newline = false, not_in = [
+        "string",
+    ] },
 ]
 
 auto_indent_using_last_non_empty_line = false
 increase_indent_pattern = ":\\s*[|>]?\\s*$"
+prettier_parser_name = "yaml"
 tab_size = 2
-
-
