test: use zed's yaml grammar

--- a/languages/ansible/config.toml
+++ b/languages/ansible/config.toml
@@ -1,5 +1,5 @@
 name = "Ansible"
-grammar = "ansible"
+grammar = "yaml"
 path_suffixes = ["ansible"]
 first_line_pattern = '^#!.*ansible'
 line_comments = ["# "]
